++ some endpoints, Tests, exception handler